2011-09-29  Greta Yorsh  <Greta.Yorsh@arm.com>

	* libc/machine/arm/memcpy.S: New file.  Contains a hand coded
	memcpy function optimized for the cortex-a15.
	* libc/machine/arm/memcpy-stub.c: New file.
	* libc/machine/arm/Makefile.am (lib_a_SOURCES): Add memcpy-stub.c,
	memcpy.S.
	* libc/machine/arm/Makefile.in: Regenerate.

2011-09-08  Jeff Johnston  <jjohnstn@redhat.com>

	* testsuite/lib/flags.exp: Add logic to add the
	srcdir include directory to compile flags.

2011-08-26  Steven Abner  <pheonix@zoomtown.com>

	* libc/time/mktm_r.c (_mktm_r): Fix previous fix.

2011-08-24  Corinna Vinschen  <vinschen@redhat.com>

	* libc/time/mktm_r.c (_mktm_r): Fix computing tm_year.

2011-08-23  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* libc/stdlib/putenv_r.c: Use "strchr" instead of obsolete "index".
	* libc/stdlib/setenv_r.c: Use "memcpy" instead of obsolete "bcopy".

2011-08-23  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* libc/misc/ffs.c, libc/string/bcmp.c, libc/string/bcopy.c,
	libc/string/bzero.c, libc/string/index.c, libc/string/rindex.c,
	libc/string/strcasecmp.c, libc/string/strncasecmp.c:
	Let synopsis reference "#include <strings.h>".

2011-08-23  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* libc/posix/regexec.c: Define "nope" only #ifndef NDEBUG.
	* libc/stdio/vfscanf.c: Define "state" only #ifdef _MB_CAPABLE.
	* libc/string/wcwidth.c: Include <wctypes.h> for "iswprint" and
	"iswcntrl".

2011-08-23  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* libc/sys/rtems/include/limits.h: Compute SSIZE_MAX based on
	__SIZE_MAX__, __SIZEOF_SIZE_T__ and __CHAR_BIT__.

2011-08-22  Ralf Corsépius <ralf.corsepius@rtems.org>

	* libc/string/index.c: Include <strings.h> for "index".
	* libc/string/rindex.c: Include <strings.h> for "rindex".
	* libc/string/strcasecmp.c: Include <strings.h> for "strcasecmp".
	Don't include <string.h>.
	* libc/string/strncasecmp.c: Include <strings.h> for "strncasecmp".
	Don't include <string.h>.